# homework_bot

./: .env.tamplate  README.md  constants.py  exceptions.py  homework.py  pyproject.toml  requirements.txt  setup.cfg
tests/: test_bot.py  utils.py
